fixed loading elements visibility

--- a/css/style.scss
+++ b/css/style.scss
@@ -20,6 +20,7 @@ body {
   }
 
   .wrapper {
+    visibility: hidden;
     position: absolute;
     top: 0;
     left: 0;
